css/style.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans|Oswald:300,400,700");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
}

/* layout */
html {
  font-size: 100%;
}

body {
  background: #f5f5f5;
}

.main-width {
  max-width: 1600px;
  margin: auto;
}

section {
  min-height: 30vh;
  width: 90%;
  margin: 10vh auto;
  padding: 5vh;
  background: #fff;
  overflow: hidden;
}

.section-heading {
  font-size: 2rem;
  letter-spacing: 1px;
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 5vw;
}

.section-heading h1 {
  font-weight: normal;
  font-family: "Oswald", sans-serif;
}

.shadow {
  border-bottom: 0 none;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
}

@media (max-width: 900px) {
  section {
    width: 100%;
    margin: 0 auto;
    padding: 1vh 5vh;
  }

  .section-heading {
    margin: 5vh 0;
  }
}

/* font */
@media (max-width: 900px) {
  html {
    font-size: 75%;
  }
}

@media (max-width: 640px) {
  html {
    font-size: 70%;
  }
}

@media (max-width: 460px) {
  html {
    font-size: 60%;
  }
}

@media (max-width: 320px) {
  html {
    font-size: 50%;
  }
}

/* navbar */
.navbar {
  width: 90%;
  left: 5%;
  position: fixed;
  background: rgba(0, 0, 0, 0.2);
  transition: 0.4s;
  z-index: 9999;
}

.navbar.active {
  background: rgba(0, 0, 0, 0.8);
}

.navbar-menu {
  list-style: none;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  margin: 1.5vw;
}

.navbar-menu li {
  display: flex;
}

.navbar-item {
  font-size: 1.3rem;
  margin: 0 2vw;
  text-decoration: none;
  color: #fff;
  transition: 0.4s;
}

/* cool underline */
.navbar-item::after {
  content: "";
  display: block;
  width: 0;
  height: 4px;
  background: #ffb667;
  transition: width 0.4s;
}

.navbar-item:hover {
  color: #ffb667;
}

.navbar-item:hover::after {
  width: 100%;
}

@media (max-width: 1600px) {
  .navbar {
    width: 100%;
    left: 0;
  }
}

@media (max-width: 900px) {
  .navbar {
    display: none;
  }
}

/* introduction */
.introduction {
  margin: 0 auto;
  height: 100vh;
  width: 90%;
  background: url(https://images.unsplash.com/photo-1456305951335-bb8134aeab8a);
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.introduction .content {
  color: #fff;
  text-align: center;
}

.content h2 {
  text-transform: uppercase;
  font-size: 1.35rem;
  letter-spacing: 1px;
}

.content h1 {
  font-family: "Oswald", sans-serif;
  font-weight: normal;
  font-size: 4rem;
}

.content p {
  font-size: 1.5rem;
}

.btn {
  font-size: 1.2rem;
  letter-spacing: 1px;
  margin-top: 1rem;
  display: inline-block;
  line-height: 1.25rem;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  user-select: none;
  border: 1px solid transparent;
  padding: 0.75rem 1.25rem;
  font-size: 1rem;
  border-radius: 0.25rem;
  transition: all 0.2s ease-in-out;
  color: #fff;
  background-color: #000;
  border-color: #666;
}

.btn:hover {
  background-color: #333;
}

@media (max-width: 1600px) {
  .introduction {
    width: 100%;
  }
}

/* sidebar */
.sidenav {
  height: 100vh;
  width: 55vw;
  margin: 0;
  background: #37474f;
  position: fixed;
  top: 0;
  right: -55vw;
  display: none;
  transition: 0.6s;
  z-index: 9999;
}

.sidenav::before {
  content: "";
  display: block;
  position: relative;
}

.sidenav.show {
  right: 0;
}

.sidenav-menu {
  list-style: none;
  margin-top: 5vh;
}

.sidenav-menu li {
  width: 100%;
  transition: 0.3s;
  min-height: 7vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.sidenav-menu li:hover {
  background: #212b30;
}

.sidenav-item {
  text-decoration: none;
  color: #fff;
  font-size: 2rem;
}

/* sidebar hamburger */
.wrapper-menu {
  width: 3.2rem;
  height: 3.2rem;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
  transition: transform 330ms ease-out;
  display: none;
  position: absolute;
  top: 5vw;
  left: -15vw;
}

.wrapper-menu.open {
  transform: rotate(-45deg);
}

.line-menu {
  background-color: #212b30;
  border-radius: 5px;
  width: 100%;
  height: 6px;
}

.line-menu.half {
  width: 50%;
}

.line-menu.start {
  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
  transform-origin: right;
}

.open .line-menu.start {
  transform: rotate(-90deg) translateX(3px);
}

.line-menu.end {
  align-self: flex-end;
  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
  transform-origin: left;
}

.open .line-menu.end {
  transform: rotate(-90deg) translateX(-3px);
}

@media (max-width: 900px) {
  .sidenav {
    display: block;
  }

  .wrapper-menu {
    display: flex;
  }
}

/* about-me */
.event {
  display: flex;
  opacity: 0;
  transition: all 0.6s;
  transform: translateX(-30%) scale(0.95);
}

.event:nth-child(even) {
  transform: translateX(30%) scale(0.95);
}

.event.show {
  opacity: 1;
  transform: translateX(0%) scale(1);
}

.event > * {
  padding: 0 2vw;
  width: 50%;
}

.event:first-child {
  margin-bottom: 50px;
}

.event:last-child {
  flex-direction: row-reverse;
}

.event-avatar img {
  height: 100%;
  width: 100%;
}

.event-description h2 {
  font-size: 1.5rem;
  text-align: center;
}

.event-description p {
  margin-top: 2vh;
  font-size: 1.2rem;
  text-align: justify;
}

@media (orientation: portrait) and (max-width: 900px) {
  .event,
  .event:last-child {
    flex-direction: column;
  }

  .event > * {
    width: 100%;
  }

  .event-description h2 {
    margin-top: 2vh;
  }
}

/* skills */
.flip-cards {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.flip-card {
  background-color: transparent;
  width: 10rem;
  height: 12rem;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
  margin: 2.5vw 4vw;
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.9s;
  transform-style: preserve-3d;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

/* Position the front and back side */
.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  border-radius: 25% 0;
}

/* Style the front side (fallback if image is missing) */
.flip-card-front {
  background-color: #f5f5f5;
  color: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.flip-card-front .fas,
.flip-card-front .fab {
  font-size: 4rem;
  margin-bottom: 1vw;
}

/* Style the back side */
.flip-card-back {
  background: linear-gradient(#414345, #232526);
  color: #fff;
  transform: rotateY(180deg);
  font-size: 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1vw;
}

/* portfolio */

.project {
  display: flex;
  margin-top: 4vh;
  border: 1px solid #ccc;
  box-shadow: 1px 1px 2px #fff inset, -1px -1px 2px #fff inset;
  border-radius: 3px/6px;
  -webkit-border-radius: 0% 0% 100% 100% / 0% 0% 8px 8px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 2px 3px;
  opacity: 0;
  transition: all 0.6s;
  transform: translateX(-30%) scale(0.95);
}

.project:nth-child(even) {
  transform: translateX(30%) scale(0.95);
}

.project.show {
  opacity: 1;
  transform: translateX(0%) scale(1);
}

.project > * {
  width: 50%;
}

.project:nth-child(even) {
  flex-direction: row-reverse;
}

.project-avatar img {
  height: 100%;
  width: 100%;
  cursor: pointer;
}

.project-description {
  padding: 4vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.project-description h2 {
  text-align: center;
}

.project-description p {
  margin-top: 2vh;
  font-size: 1.2rem;
}

.project-avatar {
  position: relative;
}

.project-repo {
  height: 100%;
  width: 100%;
  background: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
  left: 0;
  padding: 2vw;
  transition: opacity 0.5s ease-out;
  opacity: 0;
}

.inner-border {
  height: 100%;
  border: 1px solid #fff;
}

.project-repo .fab {
  color: #fff;
  font-size: 3.5rem;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.project-avatar:hover .project-repo {
  opacity: 1;
}

@media (max-width: 1024px) {
  .flip-card {
    margin: 1.5vw 3vw;
  }
}

@media (orientation: portrait) and (max-width: 900px) {
  .project,
  .project:nth-child(even) {
    flex-direction: column;
  }

  .project > * {
    width: 100%;
  }
}

/* contact */
.contact-ways {
  display: flex;
}

.contact-box {
  min-height: 15vh;
  width: 45%;
  margin: auto;
  padding: 2vw;
  text-align: center;
}

.contact-box img {
  height: 40px;
  width: 40px;
}

.contact-box p {
  margin-top: 3vh;
  font-size: 1.1rem;
}

@media (max-width: 900px) {
  .contact {
    padding-bottom: 5vh;
  }
}

@media (orientation: portrait) and (max-width: 900px) {
  .contact-ways {
    flex-direction: column;
  }

  .contact-box {
    width: 80%;
    padding: 5vw;
  }

  .contact-box:last-child {
    margin-top: 2vh;
  }
}

/* footer */
footer {
  position: relative;
  height: 60vh;
  width: 90%;
  margin: 0 auto;
  background: #000;
}

footer .content {
  height: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: rgba(255, 255, 255, 0.8);
}

footer .fab {
  font-size: 3rem;
  margin: 0 0.2vw;
  color: rgba(255, 255, 255, 0.8);
  transition: 0.4s;
}

@media (max-width: 1600px) {
  footer {
    width: 100%;
  }
}

/* scroll up button */
.scroll-up {
  color: rgba(0, 0, 0, 0.6);
  font-size: 4rem;
  position: fixed;
  bottom: 5vh;
  right: -20vw;
  -moz-transition: all 0.4s ease-in-out;
  -webkit-transition: all 0.4s ease-in-out;
  -ms-transition: all 0.4s ease-in-out;
  -o-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.scroll-up:hover {
  color: rgba(0, 0, 0, 0.9);
}

.scroll-up.show {
  right: 1vw;
}

@media (max-width: 900px) {
  .scroll-up {
    display: none;
  }
}

